[package]
name = "heng-controller"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
validator = { version = "0.12.0", features = ["derive"] }
dotenv = "0.15.0"
mobc-redis = "0.7.0"
once_cell = "1.5.2"

# ---------- waiting for actix-web v4 ----------

[dependencies.actix-web]
version = "=4.0.0-beta.1"

[dependencies.actix-rt]
version = "=2.0.0-beta.2"

[dependencies.actix-service]
version = "=2.0.0-beta.3"

[dependencies.actix-http]
version = "=3.0.0-beta.1"

# ---------- waiting for tracing v0.2 ----------

[dependencies.tracing]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

[dependencies.tracing-subscriber]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

[dependencies.tracing-error]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

# ----------------------------------------------