[package]
name = "heng-controller"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.heng-protocol]
path = "../heng-protocol"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
validator = { version = "0.12.0", features = ["derive"] }
dotenv = "0.15.0"
mobc-redis = "0.7.0"
once_cell = "1.5.2"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0.62", features = ["raw_value"] }
dashmap = "4.0.2"
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.12"
warp = "0.3.0"

# ----------------------------------------------

# FIXME: waiting for tracing v0.2

[dependencies.tracing]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

[dependencies.tracing-subscriber]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

[dependencies.tracing-error]
git = "https://github.com/tokio-rs/tracing.git"
rev = "881091a1dd5d3126faeabbca9e3779f1d16c3cce"

# ----------------------------------------------
