[package]
name = "heng-controller"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heng-protocol = { path = "../heng-protocol" }
heng-utils = { path = "../heng-utils" }
anyhow = "1.0.38"
toml = "0.5.8"
validator = { version = "0.12.0", features = ["derive"] }
dotenv = "0.15.0"
mobc-redis = "0.7.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0.62", features = ["raw_value"] }
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.12"
warp = "0.3.0"
serde = "1.0.123"
tokio-stream = "0.1.3"
once_cell = "1.5.2"
tracing = "0.1.24"
async-channel = "1.6.1"
dashmap = "4.0.2"
bytes = "1.0.1"
