[package]
name = "heng-judger"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.heng-protocol]
path = "../heng-protocol"

[dependencies]
anyhow = "1.0.38"
once_cell = "1.5.2"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
validator = { version = "0.12.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.2.0", features = ["full"] }
tokio-tungstenite = "0.13.0"
reqwest = { version = "0.11.0", features = ["json"] }
url = "2.2.0"
futures = "0.3.12"
serde_json = "1.0.62"
chrono = "0.4.19"
mobc-redis = "0.7.0"
dashmap = "4.0.2"
tokio-stream = "0.1.3"
tracing = "0.1.24"
tracing-subscriber = "0.2.16"
tracing-error = "0.1.2"
