[package]
name = "heng-protocol"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.62", features = ["raw_value"] }
validator = { version = "0.12.0", features = ["derive"] }
thiserror = "1.0.23"
