[package]
name = "heng-sandbox"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.2"
libc = "0.2.86"
log = "0.4.14"
nix = "0.19.1"
rand = "0.8.3"
rlimit = "0.5.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
