[package]
name = "heng-utils"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
once_cell = "1.6.0"
tracing-subscriber = "0.2.16"
tracing-error = "0.1.2"
faster-hex = "0.5.0"
sha2 = "0.9.3"
hmac = "0.10.1"
